feat(build): add init.sh, automated APK packaging, and modernize Java 17-21 code
- Add root  supporting Fedora (dnf), Debian/Ubuntu (apt), Arch (pacman), openSUSE (zypper), and macOS (brew) to install compilers (GCC, Clang, Rust, JDK 21+, Meson, Ninja, TinyXML, ALSA) and initialize build environments
- Add standalone Python APK builder  integrated into Meson, supporting AAPT, D8/R8 Dex compilation, and debug jarsigner
- Add APK build targets for  and
- Modernize Java 6-7 code across apps, libs, tools, and tests to Java 17-21:
  - Replaced deprecated wrapper constructors (, , , ) with
  - Replaced legacy collections with modern collections and String operations
  - Annotated Java 9+ deprecated removal methods
- Update  distribution packager to include compiled APKs (29 total artifacts)

Change-Id: Ib01eab4a2b7760a39d2495f79357d57cc596a71b