@@ -38,7 +38,7 @@ public class SparseArrayTest extends AndroidTestCase {
         }
 
         for (int i = 0; i < length; i++) {
-            assertEquals(new Integer(i), sparseArray.get(KEYS[i]));
+            assertEquals(Integer.valueOf(i), sparseArray.get(KEYS[i]));
         }
 
         for (int i = 0; i < length; i++) {
